feat: Improve appearance

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -13,5 +13,7 @@
   "defaultViewMode": "source",
   "attachmentFolderPath": "attachments",
   "communityThemeSortOrder": "download",
-  "readableLineLength": true
+  "readableLineLength": true,
+  "legacyEditor": false,
+  "livePreview": true
 }
