--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
-  "baseFontSize": 21,
-  "theme": "obsidian",
+  "baseFontSize": 22,
+  "theme": "moonstone",
   "translucency": false,
   "cssTheme": "Things"
 }
