chore: mirgate to Obsidian v1.0.0 config version

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -22,5 +22,6 @@
     "margin": "0",
     "downscalePercent": 100
   },
-  "promptDelete": false
+  "promptDelete": false,
+  "showInlineTitle": false
 }
